--- a/tags.html
+++ b/tags.html
@@ -38,7 +38,9 @@ The purpose of this snippet is to list all the tags you have in your site.
 =======================
 {% endcomment %}
 {% for tag in tags %}
-	<a href="#{{ tag | slugify }}"> {{ tag }} </a>
+	<a href="#{{ tag | slugify }}">
+        <div class="tags">{{ tag }}</div> 
+    </a>
 {% endfor %}
 
 {% comment %}
