--- a/tags.html
+++ b/tags.html
@@ -56,8 +56,8 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 		 <li>
 		 <!-- <h3> -->
 		 <a href="{{ post.url }}">
-		 {{ post.title }}
-		 <small>{{ post.date | date_to_string }}</small>
+		 {{ post.title }}</a>
+		 <a<small>{{ post.date | date_to_string }}</small>
 		 </a>
 		 {% for tag in post.tags %}
 			 <a class="tags" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
