--- a/tags.html
+++ b/tags.html
@@ -57,8 +57,8 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 		 <!-- <h3> -->
 		 <a href="{{ post.url }}">
 		 {{ post.title }}</a>
-		 <a<small>{{ post.date | date_to_string }}</small>
-		 </a>
+		 <small>{{ post.date | date_to_string }}</small>
+		 
 		 {% for tag in post.tags %}
 			 <a class="tags" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
 		 {% endfor %}
