--- a/tags.html
+++ b/tags.html
@@ -57,7 +57,7 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 		 <!-- <h3> -->
 		 <a href="{{ post.url }}">
 		 {{ post.title }}</a>
-		 <small>{{ post.date | date_to_string }}</small>
+		 <p><small>{{ post.date | date_to_string }}</small></p>
 		 
 		 {% for tag in post.tags %}
 			 <a class="tags" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
