--- a/tags.html
+++ b/tags.html
@@ -56,9 +56,9 @@ The purpose of this snippet is to list all your posts posted with a certain tag.
 		 <li>
 		 <!-- <h3> -->
 		 <a href="{{ post.url }}">
-		 {{ post.title }}</a>
-		 <p><small>{{ post.date | date_to_string }}</small></p>
-		 
+		 {{ post.title }}
+		 <small>{{ post.date | date_to_string }}</small>
+		 </a>
 		 {% for tag in post.tags %}
 			 <a class="tags" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
 		 {% endfor %}
